<resources>
    <string name="e5_title">Welcome to the last promotion point calculator you will ever need. (It just so happens to be the ONLY app for the Army\'s new promotion point system.)</string>
    <string name="e5_subtitle">Add the appropriate information into the options below.</string>
    <string name="app_name">Army Promotion Point Calculator</string>
    <string name="e6_title">Think you are ready to join the ranks of the coveted Staff Sergeant? Enter your data below to see how you measure up.</string>
    <string name="comingSoon">This feature is coming soon! Expect it! Seriously... I know it\'s said this for a long time but I\'m back from deployment now...</string>
    <string name="upToDate">This calculator is as current as it gets, including updates to the system effect 27 Oct 2013. If you feel I am incorrect, please email me.</string>
    <string name="apft_title">Welcome to the APFT Calculator</string>
    <string name="points1">From this page you will be able to view historical data on your MOS\'s promotion points. This will give you a better idea of which months points tend to lower, what you need, and where you should be to get promoted.</string>
    <string name="points2">Because of the constant updating that is required, I am going to make this available in the "Pro" version.</string>
    <string name="points3">Please leave me some feedback.</string>
    <string name="about1">This calculator will provide you with the most accurate evaluation of your promotion points and give you an honest idea of where you stand on being promoted.</string>
    <string name="about2">Whether you just happened to stumble upon this app or you are using it to further your career, please take a few minutes and give us a review or share it with a friend.</string>
    <string name="about3">This app was created by SGT Tim Miller of 249th Prime Power BN. If you have any questions feel free to email me at gunners.sales@live.com. You can also reach me on Facebook.</string>
    <string name="blank">  </string>
    <string name="facebook">Visit My Facebook</string>
    <string name="faceClickHandler">faceClickHandler</string>
    <string name="calcButton">Calculate My Points</string>
    <string name="calcClickHandler">calcClickHandler</string>
    <string name="doubleCheck">Double Check Your Entries</string>
    <string name="e5milTraining">Military Training (340 Pts Max)</string>
    <string name="e6milTraining">Military Training (255 Pts Max)</string>
    <string name="apftHint">Enter APFT Score</string>
    <string name="deployHint">Enter Months Deployed</string>
    <string name="WeapQualHint">Enter Weapon Score</string>
    <string name="weapQualCard">Select Weapons Cards</string>
    <string-array name="weapQualCards">
        <item>DA Form 3595-R or 5790-R</item>
        <item>DA Form 85-R w/ M249 MG</item>
        <item>DA Form 85-R w/ M240B/M60</item>
        <item>DA Form 88</item>
        <item>DA Form 5704 or 5704-R</item>
        <item>DA Form 7304-R</item>
        <item>CID Form</item>
        <item>FLVA Form 19-10</item>
    </string-array>
    <string name="e5milAwards">Awards/Decorations (125 Pts Max)</string>
    <string name="e6milAwards">Awards/Decorations (165 Pts Max)</string>
    <string name="awardsSubTitle">Awards and Medals</string>
    <string name="badgesSubTitle">Badges</string>
    <string name="soldMedalPlus">Soldier\'s Medal or Higher</string>
    <string name="bronzeStarV">Bronze Star w/ "V" Device</string>
    <string name="bronzeStar">Bronze Star</string>
    <string name="purpHeart">Purple Heart</string>
    <string name="DMSM">Defense MSM</string>
    <string name="MSM">Meritorious Service Medal (MSM)</string>
    <string name="airMedalV">Air Medal with "V" Device</string>
    <string name="airMedal">Air Medal</string>
    <string name="ARCOMV">ARCOM with "V" Device</string>
    <string name="ARCOM">ARCOM</string>
    <string name="JSCOM">Joint Service Commendation</string>
    <string name="AAM">Army Achievement Medal</string>
    <string name="JSAAM">Joint Service Achievement Medal</string>
    <string name="RCAAM">Res. Comp. Achievement Medal</string>
    <string name="AFRM">Armed Forces Reserved Medal</string>
    <string name="GCM">Good Conduct Medal</string>
    <string name="volunteer">Outstanding Volunteer</string>
    <string name="COA">Cert. of Achievement</string>
    <string name="CIB">Combat Inf.</string>
    <string name="CMB">Combat Med.</string>
    <string name="EIB">Expert Inf.</string>
    <string name="CAB">Combat Act.</string>
    <string name="EFMB">Expert Field Medical</string>
    <string name="presService">Presidential Service</string>
    <string name="vpService">Vice President Service</string>
    <string name="drill">Drill Sgt</string>
    <string name="rigger">Rigger</string>
    <string name="diver">Diver</string>
    <string name="pathfinder">Pathfinder</string>
    <string name="airAss">Air Assault</string>
    <string name="airCrew">Air Crew</string>
    <string name="SecDef">Sect. of Def. Service</string>
    <string name="JStaff">Joint Chief of Staff ID</string>
    <string name="AStaff">Army Staff Identification</string>
    <string name="space">Space</string>
    <string name="tombGuard">Tomb Guard</string>
    <string name="drivers">Driver and Mechanic</string>
    <string name="parachutists">Parachutist\'s Badges</string>
    <string name="basic">Basic</string>
    <string name="senior">Senior</string>
    <string name="master">Master</string>
    <string name="gold">Gold</string>
    <string name="airAdvan">Airborne Advantage</string>
    <string name="recruit">Recruiter\'s Badges</string>
    <string name="EOD">Explos. Ordinance Disposal Badge</string>
    <string name="e5milEd">Military Education (260 Pts Max)</string>
    <string name="e6milEd">Military Education (280 Pts Max)</string>
    <string name="residentSubTitle">Resident Courses</string>
    <string name="ncoesSubTitle">NCOES</string>
    <string name="accpSubTitle">ACCP and eLearning</string>
    <string name="alcGrad">Graduated ALC</string>
    <string name="wlcGrad">Graduated WLC</string>
    <string name="commList">Commandant\'s List</string>
    <string name="distGrad">Distinguished Honor/Leadership Award</string>
    <string name="ranger">Ranger School</string>
    <string name="specForces">SF Qualification</string>
    <string name="sapper">Sapper Qualification</string>
    <string name="AMMSC">Maint. Manag. Sys. Clerk</string>
    <string name="PLLC">Prescribed Load List Clerk</string>
    <string name="MPOP">Motor Pool Ops./Management</string>
    <string name="GenOp">Generator Operator</string>
    <string name="fuelHandle">Fuel Handlers</string>
    <string name="basicWeld">Basic Welding</string>
    <string name="forkOp">Forklift Operator</string>
    <string name="busDrive">Bus Driver</string>
    <string name="unitSupply">Unit Supply Clerk</string>
    <string name="unitSupplyOps">Unit Supply Ops./Management</string>
    <string name="unitArmor">Unit Armorer</string>
    <string name="CBRNDef">CBRN Defense</string>
    <string name="unitPostal">Unit Postal Clerk</string>
    <string name="diskOp">Disk Operating Systems</string>
    <string name="wordProcess">Word Processing</string>
    <string name="dataManage">Database Management</string>
    <string name="unitLog">Unit Logistics Systems</string>
    <string name="accpHours">Total Hours</string>
    <string name="otherResHours">Other Resident Course Hours</string>
    <string name="e5civEd">Civilian Education (75 Pts Max)</string>
    <string name="e6civEd">Civilian Education (100 Pts Max)</string>
    <string name="semHours">Semester Hours</string>
    <string name="techCerts">Technical Certifications</string>
    <string name="dlpt">Current Def. Language Prof. Tests</string>
    <string name="degCompletion">Degree Completion</string>
    <string name="selMOS">What\'s your MOS?</string>
    <string name="selPromo">What are you trying to get promoted too?</string>
    <string name="selZone">Which zone are you?</string>
    <string name="toSGT">To Sergeant</string>
    <string name="toSSG">To Staff Sergeant</string>
    <string name="primary">Primary Zone</string>
    <string name="secondary">Secondary Zone</string>
    <string name="mosSpinHint">Select MOS</string>
    <string name="viewGraph">View Historical Data</string>
    <string name="usersPointsHint">Your Promotion Points</string>
    <string name="graphClickHandler">graphClickHandler</string>
</resources>